Fix background stretch error

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
-body {
-  background-image: url(../img/background.png);
-  background-repeat: no-repeat;
-  position: relative;
-  width: 100% auto;
-  height: 100% auto;
-  margin-left: auto;
-  margin-right: auto;
+html { 
+  background: url(../img/background.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 img {
   text-align: center;
